--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>VgOstWeb</title>
+  <title>VG OST API</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
   <link href="./assets/css/oswal-font.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
